tests/golden/openshift-postgres/openshift-postgres/openshift-postgres/00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    SYNMonitoring: main
    name: syn-openshift-postgres
  name: syn-openshift-postgres
